fix(achivement): card subtitle not centered

--- a/src/css/Achievement.css
+++ b/src/css/Achievement.css
@@ -193,6 +193,8 @@
         font-size: 1.5vh;
         margin-top:1vh;
         margin-left: 30px;
+        margin-right: 15px;
+        text-align: center;
         color: white;    
     }
     
@@ -428,6 +430,8 @@
             font-size: 1.5vh;
             margin-top:1vh;
             margin-left: 15px;
+            margin-right: 15px;
+            text-align: center;
             color: white;    
         }
         
